@@ -161,6 +161,7 @@ Version 2.3.0 - The river knows.
 		* Fixed multi line stdin redirected as batch into amulecmd
 		* "Clear completed" button now only clears downloads in current category
 		* Completed downloads can be seen and cleared in amulegui
+		* Bold lines in log window now for Windows too
 
 	Vollstrecker:
 		* Unify copyright lines
